# ML-Sandbox

./: README.md  environment.yml
main/: Untitled.ipynb  pyproject.toml
main/NNs/: testing_lstm.ipynb
main/datasets/dummy_data/: dummy_data.ipynb
main/xLSTM/: testing_xlstm.ipynb
main/xgboost/: data_processing.py  lstm.ipynb  main.py  models.py  test_lstm.ipynb  training.py
old_stuff/: pyproject.toml
old_stuff/xgboost/: main.py  params.py  training.py
