[tool.poetry]
name = "main"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23.2"
jupyter = "^1.0.0"
jupyterlab = "^3.6.1"
torch = "^1.13.1"
torchvision = "^0.14.1"
torchaudio = "^0.13.1"
scikit-learn = "^1.2.1"
pandas = "^1.5.3"
xgboost = "^1.7.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
