[tool.poetry]
name = "main"
version = "0.1.0"
description = ""
authors = ["hannahcass"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.5.3"
jupyter = "^1.0.0"
jupyterlab = "^3.6.1"
scikit-learn = "^1.2.1"
xgboost = "^1.7.4"
optuna = "^3.1.0"
matplotlib = "^3.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
